Made the layout of the 'Login' page

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -19,7 +19,7 @@
                     <img src="@icons/header-footer/man-user.svg" alt="man-user">
                 </div>
                 <div class="sidemenu__login-text">
-                    <a href="#" class="sidemenu__account-link">
+                    <a href="@html/login.html" class="sidemenu__account-link">
                         Вход
                     </a>
                 </div>
@@ -97,7 +97,7 @@
                 </div>
                 <div class="user-unit">
                     <div class="user-unit__login">
-                        <a href="#" class="user-unit__login-link">
+                        <a href="@html/login.html" class="user-unit__login-link">
                             <div class="user-unit__login-img">
                                 <img src="@icons/header-footer/man-user.svg" alt="man-user">
                             </div>
