Added links to the '404' page

--- a/src/about-company.html
+++ b/src/about-company.html
@@ -52,7 +52,7 @@
                     Главная наша цель – получить максимальную <br>
                     прибыль с одного гектара.
                 </div>
-                <a href="#" class="founder__info-link">
+                <a href="@html/404.html" class="founder__info-link">
                     Написать нам
                 </a>
             </div>
