--- a/src/for-clients.html
+++ b/src/for-clients.html
@@ -119,7 +119,7 @@
                         в наш главный офис, мы всегда пойдем <br>
                         вам на встречу.
                     </div>
-                    <a href="#" class="catalog__tab-link">Написать нам</a>
+                    <a href="@html/404.html" class="catalog__tab-link">Написать нам</a>
                 </div>
                 <div class="catalog__tab-img">
                     <img src="@img/for-clients/market.png" alt="market" loading="lazy">
@@ -140,7 +140,7 @@
                         в наш главный офис, мы всегда пойдем <br>
                         вам на встречу.
                     </div>
-                    <a href="#" class="catalog__tab-link">Написать нам</a>
+                    <a href="@html/404.html" class="catalog__tab-link">Написать нам</a>
                 </div>
                 <div class="catalog__tab-img">
                     <img src="@img/for-clients/market.png" alt="market" loading="lazy">
@@ -161,7 +161,7 @@
                         в наш главный офис, мы всегда пойдем <br>
                         вам на встречу.
                     </div>
-                    <a href="#" class="catalog__tab-link">Написать нам</a>
+                    <a href="@html/404.html" class="catalog__tab-link">Написать нам</a>
                 </div>
                 <div class="catalog__tab-img">
                     <img src="@img/for-clients/walnut-bg.png" alt="market" loading="lazy">
@@ -182,7 +182,7 @@
                         в наш главный офис, мы всегда пойдем <br>
                         вам на встречу.
                     </div>
-                    <a href="#" class="catalog__tab-link">Написать нам</a>
+                    <a href="@html/404.html" class="catalog__tab-link">Написать нам</a>
                 </div>
                 <div class="catalog__tab-img">
                     <img src="@img/for-clients/market.png" alt="market" loading="lazy">
@@ -203,7 +203,7 @@
                         в наш главный офис, мы всегда пойдем <br>
                         вам на встречу.
                     </div>
-                    <a href="#" class="catalog__tab-link">Написать нам</a>
+                    <a href="@html/404.html" class="catalog__tab-link">Написать нам</a>
                 </div>
                 <div class="catalog__tab-img">
                     <img src="@img/for-clients/market.png" alt="market" loading="lazy">
