--- a/src/html/about-manufacture.html
+++ b/src/html/about-manufacture.html
@@ -21,7 +21,7 @@
                     воспроизводства саженцев в питомнике и выращивания трюфеля.
                 </div>
             </div>
-            <a href="#" class="about-manufacturer__link @@linkMod">Подробнее</a>
+            <a href="@html/about-company.html" class="about-manufacturer__link @@linkMod">Подробнее</a>
         </div>
         <div class="swiper about-manufacturer__slider">
             <div class="swiper-wrapper about-manufacturer__swiper-wrapper">
