--- a/src/html/mini-news.html
+++ b/src/html/mini-news.html
@@ -39,7 +39,7 @@
                     не смотря на большой спрос в Европе и отличную...
                 </div>
                 <object>
-                    <a href="#" class="mini-news__link">
+                    <a href="@html/404.html" class="mini-news__link">
                         Читать
                         <div class="mini-news__link-img">
                             <img src="@icons/arrow-link.svg" alt="arrow-link">
@@ -63,7 +63,7 @@
                     не смотря на большой спрос в Европе и отличную...
                 </div>
                 <object>
-                    <a href="#" class="mini-news__link">
+                    <a href="@html/404.html" class="mini-news__link">
                         Читать
                         <div class="mini-news__link-img">
                             <img src="@icons/arrow-link.svg" alt="arrow-link">
@@ -87,7 +87,7 @@
                     не смотря на большой спрос в Европе и отличную...
                 </div>
                 <object>
-                    <a href="#" class="mini-news__link">
+                    <a href="@html/404.html" class="mini-news__link">
                         Читать
                         <div class="mini-news__link-img">
                             <img src="@icons/arrow-link.svg" alt="arrow-link">
@@ -111,7 +111,7 @@
                     не смотря на большой спрос в Европе и отличную...
                 </div>
                 <object>
-                    <a href="#" class="mini-news__link">
+                    <a href="@html/404.html" class="mini-news__link">
                         Читать
                         <div class="mini-news__link-img">
                             <img src="@icons/arrow-link.svg" alt="arrow-link">
@@ -135,7 +135,7 @@
                     не смотря на большой спрос в Европе и отличную...
                 </div>
                 <object>
-                    <a href="#" class="mini-news__link">
+                    <a href="@html/404.html" class="mini-news__link">
                         Читать
                         <div class="mini-news__link-img">
                             <img src="@icons/arrow-link.svg" alt="arrow-link">
@@ -159,7 +159,7 @@
                     не смотря на большой спрос в Европе и отличную...
                 </div>
                 <object>
-                    <a href="#" class="mini-news__link">
+                    <a href="@html/404.html" class="mini-news__link">
                         Читать
                         <div class="mini-news__link-img">
                             <img src="@icons/arrow-link.svg" alt="arrow-link">
@@ -169,7 +169,7 @@
             </a>
         </div>
     </div>
-    <a href="#" class="mini-news__btn">
+    <a href="@html/news.html" class="mini-news__btn">
         Смотреть все новости
     </a>
 </section>
