--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
             а также плоды шиповника в удобной, надежной, вакуумной упаковке
             разного объема</div>
         @@include('html/products.html', {})
-        <a href="#" class="production__btn">
+        <a href="@html/product-catalog.html" class="production__btn">
             Перейти в магазин
         </a>
     </section>
