--- a/src/one-news.html
+++ b/src/one-news.html
@@ -109,7 +109,7 @@
                             Центр поддержки экспорта,
                             в студии Павел Тулба
                         </div>
-                        <a href="#" class="aside__link">
+                        <a href="@html/404.html" class="aside__link">
                             Читать
                             <div class="aside__link-img">
                                 <img src="@icons/arrow-link.svg" alt="arrow-link">
@@ -127,7 +127,7 @@
                             Центр поддержки экспорта,
                             в студии Павел Тулба
                         </div>
-                        <a href="#" class="aside__link">
+                        <a href="@html/404.html" class="aside__link">
                             Читать
                             <div class="aside__link-img">
                                 <img src="@icons/arrow-link.svg" alt="arrow-link">
@@ -145,7 +145,7 @@
                             Центр поддержки экспорта,
                             в студии Павел Тулба
                         </div>
-                        <a href="#" class="aside__link">
+                        <a href="@html/404.html" class="aside__link">
                             Читать
                             <div class="aside__link-img">
                                 <img src="@icons/arrow-link.svg" alt="arrow-link">
