Made a registration page and added js

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="sidemenu__registration">
-                <a href="#" class="sidemenu__account-link">
+                <a href="@html/registration.html" class="sidemenu__account-link">
                     Регистрация
                 </a>
             </div>
@@ -107,7 +107,7 @@
                         </a>
                     </div>
                     <div class="user-unit__registration">
-                        <a href="#" class="user-unit__registration-link">Регистрация</a>
+                        <a href="@html/registration.html" class="user-unit__registration-link">Регистрация</a>
                     </div>
                     <div class="user-unit__language">
                         <div class="user-unit__language-select">Ru</div>
