--- a/src/login.html
+++ b/src/login.html
@@ -23,7 +23,7 @@
         <div class="login__title">
             Войти в личный кабинет
         </div>
-        <form action="GET" class="login__form">
+        <form method="get" class="login__form">
             <input type="email" name="email" id="email" class="login__input" placeholder="Email" required>
             <input type="password" name="password" id="password" class="login__input" placeholder="Пароль" required>
             <a href="#" class="login__forgot">
