Added 'My Account' link if user is logged in

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -96,6 +96,11 @@
                     Ваша персональная скидка - 5%
                 </div>
                 <div class="user-unit">
+                    <div class="user-unit__account">
+                        <a href="#" class="user-unit__account-link">
+                            Личный кабинет
+                        </a>
+                    </div>
                     <div class="user-unit__login">
                         <a href="@html/login.html" class="user-unit__login-link">
                             <div class="user-unit__login-img">
