Made the 'Restore password' page layout, added 'My Account' link if user is logged in

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,13 +1,13 @@
 <div class="sidemenu">
     <div class="sidemenu__heading">
-        <div class="sidemenu__logo">
+        <a href="@html/index.html" class="sidemenu__logo">
             <div class="sidemenu__logo-img">
                 <img src="@icons/logo.svg" alt="logo">
             </div>
             <div class="sidemenu__title">
                 Орех <br> Причерноморья
             </div>
-        </div>
+        </a>
         <div class="sidemenu__exit">
             <img src="@icons/close-button.svg" alt="close-button">
         </div>
@@ -27,6 +27,11 @@
             <div class="sidemenu__registration">
                 <a href="@html/registration.html" class="sidemenu__account-link">
                     Регистрация
+                </a>
+            </div>
+            <div class="sidemenu__cabinet">
+                <a href="#" class="sidemenu__cabinet-link">
+                    Личный кабинет
                 </a>
             </div>
         </div>
