--- a/src/login.html
+++ b/src/login.html
@@ -28,7 +28,7 @@
         <form class="login__form">
             <input type="email" name="email" id="email" class="login__input" placeholder="Email" required>
             <input type="password" name="password" id="password" class="login__input" placeholder="Пароль" required>
-            <a href="#" class="login__forgot">
+            <a href="@html/recover-password.html" class="login__forgot">
                 Забыли пароль?
             </a>
             <button type="submit" class="login__btn">
