Added js to the 'Password recovery' page

--- a/src/recover-password.html
+++ b/src/recover-password.html
@@ -66,6 +66,7 @@
         </form>
     </section>
     @@include('html/footer.html', {theme: 'footer_dark'})
+    <script src="js/script.recover-password.js"></script>
 </body>
 
 </html>
