Made a pre-design of the 'My Account' page

--- a/src/404.html
+++ b/src/404.html
@@ -25,6 +25,7 @@
         </a>
     </section>
     @@include('html/footer.html', {theme: 'footer_dark'})
+    @@include('html/script.html', {})
 </body>
 
 </html>
