--- a/src/registration.html
+++ b/src/registration.html
@@ -283,6 +283,7 @@
         <button type="submit" class="registration__submit" form="form">Продолжить</button>
     </section>
     @@include('html/footer.html', {theme: 'footer_dark'})
+    @@include('html/script.html', {})
     <script src="js/script.registration.js"></script>
     <script src="js/script.registration-select.js"></script>
     <script src="js/script.registration-form.js"></script>
