--- a/src/html/header.html
+++ b/src/html/header.html
@@ -30,7 +30,7 @@
                 </a>
             </div>
             <div class="sidemenu__cabinet">
-                <a href="#" class="sidemenu__cabinet-link">
+                <a href="@html/personal-cabinet.html" class="sidemenu__cabinet-link">
                     Личный кабинет
                 </a>
             </div>
@@ -102,7 +102,7 @@
                 </div>
                 <div class="user-unit">
                     <div class="user-unit__account">
-                        <a href="#" class="user-unit__account-link">
+                        <a href="@html/personal-cabinet.html" class="user-unit__account-link">
                             Личный кабинет
                         </a>
                     </div>
