Made an 'Order History' tab

--- a/src/personal-cabinet.html
+++ b/src/personal-cabinet.html
@@ -68,7 +68,9 @@
         </div>
         <div class="content__container">
             <div class="content__tabs">
-                <div class="content__tab">asd</div>
+                <div class="content__tab">
+                    @@include('html/personal-cabinet/order-history.html', {})
+                </div>
                 <div class="content__tab">
                     @@include('html/personal-cabinet/transaction-history.html', {})
                 </div>
