--- a/src/registration.html
+++ b/src/registration.html
@@ -72,34 +72,8 @@
                         <li class="select__item" data-value="Minsk region">Минская обл.</li>
                     </ul>
                 </div>
-                <div class="registration__address">
-                    <input class="select__input" type="text" required name="city" id="city">
-                    <div class="select__head">Город</div>
-                    <ul class="select__list select__list_msk">
-                        <li class="select__item" data-value="Moscow">Москва</li>
-                    </ul>
-                    <ul class="select__list select__list_nn">
-                        <li class="select__item" data-value="Nizhny Novgorod">Нижний Новгород</li>
-                    </ul>
-                    <ul class="select__list select__list_spb">
-                        <li class="select__item" data-value="Leningrad">Санкт-Петербург</li>
-                    </ul>
-                    <ul class="select__list select__list_khr">
-                        <li class="select__item" data-value="Kharkiv">Харьков</li>
-                    </ul>
-                    <ul class="select__list select__list_kv">
-                        <li class="select__item" data-value="Kyiv">Киев</li>
-                    </ul>
-                    <ul class="select__list select__list_lv">
-                        <li class="select__item" data-value="Lviv">Львов</li>
-                    </ul>
-                    <ul class="select__list select__list_ods">
-                        <li class="select__item" data-value="Odesa">Одесса</li>
-                    </ul>
-                    <ul class="select__list select__list_mnk">
-                        <li class="select__item" data-value="Minsk">Минск</li>
-                    </ul>
-                </div>
+                <input class="registration__address-text" type="text" required name="city" id="city"
+                    placeholder="Город*">
                 <input type="text" required id="address" name="address" class="registration__address-text"
                     placeholder="Адрес">
                 <div class="registration__title-password">
