--- a/src/about-company.html
+++ b/src/about-company.html
@@ -13,7 +13,7 @@
 
 <body>
     @@include('html/header.html', {})
-    <section class="promo">
+    <section class="promo" data-page="about-company">
         <div class="promo__bg-img">
             <img src="@img/about-company/garden.png" alt="garden">
         </div>
