--- a/src/for-clients.html
+++ b/src/for-clients.html
@@ -13,7 +13,7 @@
 
 <body>
     @@include('html/header.html', {})
-    <section class="promo">
+    <section class="promo" data-page="for-clients">
         <div class="promo__bg-img">
             <img src="@img/for-clients/walnut-bg.png" alt="garden">
         </div>
