--- a/src/html/header.html
+++ b/src/html/header.html
@@ -57,13 +57,24 @@
     </div>
     <div class="sidemenu__navigation">
         <ul class="sidemenu__list">
-            <li class="sidemenu__list-item"><a href="@html/product-catalog.html" class="sidemenu__list-link">Магазин</a></li>
-            <li class="sidemenu__list-item"><a href="@html/about-company.html" class="sidemenu__list-link">О производстве</a></li>
-            <li class="sidemenu__list-item"><a href="@html/payment.html" class="sidemenu__list-link">Оплата и доставка</a></li>
-            <li class="sidemenu__list-item"><a href="@html/for-clients.html" class="sidemenu__list-link">Оптовым и корпоративным клиентам</a>
+            <li class="sidemenu__list-item">
+                <a href="@html/product-catalog.html" class="sidemenu__list-link">Магазин</a>
             </li>
-            <li class="sidemenu__list-item"><a href="@html/news.html" class="sidemenu__list-link">Новости и статьи</a></li>
-            <li class="sidemenu__list-item"><a href="#" class="sidemenu__list-link">Контакты</a></li>
+            <li class="sidemenu__list-item">
+                <a href="@html/about-company.html" class="sidemenu__list-link">О производстве</a>
+            </li>
+            <li class="sidemenu__list-item">
+                <a href="@html/payment.html" class="sidemenu__list-link">Оплата и доставка</a>
+            </li>
+            <li class="sidemenu__list-item">
+                <a href="@html/for-clients.html" class="sidemenu__list-link">Оптовым и корпоративным клиентам</a>
+            </li>
+            <li class="sidemenu__list-item">
+                <a href="@html/news.html" class="sidemenu__list-link">Новости и статьи</a>
+            </li>
+            <li class="sidemenu__list-item">
+                <a href="#" class="sidemenu__list-link">Контакты</a>
+            </li>
         </ul>
     </div>
 </div>
