--- a/src/404.html
+++ b/src/404.html
@@ -26,6 +26,11 @@
     </section>
     @@include('html/footer.html', {theme: 'footer_dark'})
     @@include('html/script.html', {})
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            document.body.classList.remove('webp');
+        })
+    </script>
 </body>
 
 </html>
