--- a/src/news.html
+++ b/src/news.html
@@ -13,11 +13,14 @@
 
 <body>
     @@include('html/header.html', {})
-    <section class="promo">
+    <section class="promo" data-page="news">
         <div class="promo__wrapper">
             <div class="promo__path">
                 <a href="@html/index.html" class="promo__path-link">Главная</a>
-                <img src="@icons/arrow-path.svg" alt="arrow-path">
+                <svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M7.00001 10L6.3 9.30002L10.1 5.5H0V4.50002H10.1L6.3 0.700003L7.00001 1.81198e-05L12 5.00001L7.00001 10Z" fill="#8A8A8A"/>
+                    </svg>
+                    
                 Новости и статьи
             </div>
             <h1 class="promo__title">Новости и статьи</h1>
