--- a/src/payment.html
+++ b/src/payment.html
@@ -12,7 +12,7 @@
 
 <body>
     @@include('html/header.html', {})
-    <section class="promo">
+    <section class="promo" data-page="payment">
         <div class="promo__bg-img">
             <img src="@img/payment/promo_bg.png" alt="nuts">
         </div>
