Made a tab to change the contact information

--- a/src/personal-cabinet.html
+++ b/src/personal-cabinet.html
@@ -74,7 +74,9 @@
                 <div class="content__tab">
                     @@include('html/personal-cabinet/transaction-history.html', {})
                 </div>
-                <div class="content__tab">sda</div>
+                <div class="content__tab">
+                    @@include('html/personal-cabinet/contact-details.html', {})
+                </div>
                 <div class="content__tab">
                     @@include('html/personal-cabinet/password.html', {})
                 </div>
@@ -87,6 +89,7 @@
     <script src="js/script.personal-cabinet.js"></script>
     <script src="js/script.order-history.js"></script>
     <script src="js/script.password.js"></script>
+    <script src="js/script.contact.js"></script>
 </body>
 
 </html>
